--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <a href="#/" class="logo">
         <img src="/asset/imgs/favicon.ico" style="padding-bottom: 5px;"> FinLog
     </a>
-    <nav class="navbar navbar-static-top" role="navigation">
+    <nav class="navbar navbar-static-top" role="navigation" ng-controller="menuController">
         <!-- 菜单 -->
         <ul class="nav navbar-nav">
             <li class="dropdown messages-menu">
