--- a/index.html
+++ b/index.html
@@ -19,30 +19,47 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h2>
+<a id="简介" class="anchor" href="#%E7%AE%80%E4%BB%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a>简介</h2>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>致力于打造一款一站式（one-stop-frontend-framework）前端框架； 构建一个完全前后分离的前端框架，完全的静态资源，可以部署在nginx、node、Apache、tomcat等所有能够提供静态资源的web服务器；</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h2>
+<a id="构想" class="anchor" href="#%E6%9E%84%E6%83%B3" aria-hidden="true"><span class="octicon octicon-link"></span></a>构想</h2>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<ul>
+<li>主要使用 mvc框架angularjs、页面框架AdminLTE、requirejs模块管理、构建工具grunt</li>
+<li>将所有的url配置在一个文件中提供，方便进行统一控制、测试、也可来自不同服务器</li>
+</ul>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<h2>
+<a id="启动步骤" class="anchor" href="#%E5%90%AF%E5%8A%A8%E6%AD%A5%E9%AA%A4" aria-hidden="true"><span class="octicon octicon-link"></span></a>启动步骤</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<ul>
+<li>&gt; npm install</li>
+<li>&gt; bower install</li>
+<li>&gt; npm start</li>
+</ul>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<h2>
+<a id="设计说明" class="anchor" href="#%E8%AE%BE%E8%AE%A1%E8%AF%B4%E6%98%8E" aria-hidden="true"><span class="octicon octicon-link"></span></a>设计说明</h2>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<ul>
+<li>
+<code>asset/views</code> 下面是对应的页面，url就是对应的文件名称(无后缀)</li>
+<li>
+<code>asset/js</code> 下面就是views下页面对应的依赖，根据名称查找</li>
+</ul>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<h2>
+<a id="问题列表" class="anchor" href="#%E9%97%AE%E9%A2%98%E5%88%97%E8%A1%A8" aria-hidden="true"><span class="octicon octicon-link"></span></a>问题列表</h2>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<ul>
+<li>请求后台服务时是否有身份标识？</li>
+<li>是否需要记录用户状态？通过什么记录？</li>
+<li>多系统时怎么共享状态？单点登录？</li>
+<li>通过什么传递用户标识？cookie？安全性如何保证？</li>
+</ul>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/1329555958/osff">Osff</a> is maintained by <a href="https://github.com/1329555958">1329555958</a>.</span>
